Replaced logo by transparent logo from asna.com

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="/">
-                <img class="logo" src="/images/asna-qsys-128.png" alt="ASNA QSys Docs on 'header.html'" title="ASNA QSys Docs" width="32" height="32" />
+                <img class="logo" src="/images/asna-qsys-128.png" alt="ASNA" title="ASNA QSys Docs" />
             </a>
         </div>
         <div class="navbar-collapse" aria-expanded="false" style="height: 1px;">
