--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div class="logo-mobile">
     <a href="/">
-        <img src="/images/asna-qsys-32.png" alt="ASNA Qsys Docs" title="ASNA QSys Docs" width="32" height="32" />
+        <img src="/images/asna-qsys-64.png" alt="ASNA QSys Docs" title="ASNA QSys Docs" />
     </a>
 </div>
 <div class="search-form" id="search-div">
