--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
         {%- assign page_description = content | strip_html | strip | truncatewords: 30 -%}
     {%- endif -%}
 {%- endif -%}
-{%- assign domain_name = 'https://eduardocross.github.io/' -%}
+{%- assign domain_name = 'https://asnaqsys.github.io/' -%}
 {%- if jekyll.environment == 'development' -%}
 {%- assign domain_name = 'https://localhost:4000' -%}
 {%- endif -%}
@@ -70,23 +70,23 @@
   <link rel="stylesheet" href="/css/style.css" id="pagestyle">
 
   <!-- SEO stuff -->
-  <!-- <meta name="twitter:title" itemprop="title name" content="{{ page.title | default: page_title }}"/>
-  <!-- <meta name="twitter:description" property="og:description" itemprop="description" content="{{ page_description | escape_once }}" />
-  <!-- <meta name="twitter:card" content="summary"/>
-  <!-- <meta name="twitter:domain" content="docs.docker.com"/>
-  <!-- <meta name="twitter:site" content="@docker_docs"/>
-  <!-- <meta name="twitter:url" content="https://twitter.com/docker_docs"/>
-  <!-- <meta name="twitter:image:src" content="/images/docs@2x.png"/>
-  <!-- <meta name="twitter:image:alt" content="Docker Documentation"/>
-  <!-- <meta property="og:title" content="{{ page.title | default: page_title }}" />
-  <!-- <meta property="og:description" content="{{ page.description | default: page_description | escape_once }}" />
-  <!-- <meta property="og:type" content="website"/>
-  <!-- <meta property="og:updated_time" itemprop="dateUpdated" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
-  <!-- <meta property="og:image" itemprop="image primaryImageOfPage" content="/images/docs@2x.png"/>
-  <!-- <meta property="og:locale" content="en_US" />
-  <!-- <meta property="og:url" content="https://docs.docker.com{{ page.url }}" />
-  <!-- <meta property="og:site_name" content="Docker Documentation" />
-  <!-- <meta property="article:published_time" itemprop="datePublished" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
-  <!-- <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebPage","headline":{{ page.title | default: page_title | jsonify }},"description":{{ page.description | default: page_description | jsonify }},"url":"https://docs.docker.com{{ page.url }}"}</script>
+  <!-- <meta name="twitter:title" itemprop="title name" content="{{ page.title | default: page_title }}"/> -->
+  <!-- <meta name="twitter:description" property="og:description" itemprop="description" content="{{ page_description | escape_once }}" /> -->
+  <!-- <meta name="twitter:card" content="summary"/> -->
+  <!-- <meta name="twitter:domain" content="docs.docker.com"/> -->
+  <!-- <meta name="twitter:site" content="@docker_docs"/> -->
+  <!-- <meta name="twitter:url" content="https://twitter.com/docker_docs"/> -->
+  <!-- <meta name="twitter:image:src" content="/images/docs@2x.png"/> -->
+  <!-- <meta name="twitter:image:alt" content="Docker Documentation"/> -->
+  <!-- <meta property="og:title" content="{{ page.title | default: page_title }}" /> -->
+  <!-- <meta property="og:description" content="{{ page.description | default: page_description | escape_once }}" /> -->
+  <!-- <meta property="og:type" content="website"/> -->
+  <!-- <meta property="og:updated_time" itemprop="dateUpdated" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/> -->
+  <!-- <meta property="og:image" itemprop="image primaryImageOfPage" content="/images/docs@2x.png"/> -->
+  <!-- <meta property="og:locale" content="en_US" /> -->
+  <!-- <meta property="og:url" content="https://docs.docker.com{{ page.url }}" /> -->
+  <!-- <meta property="og:site_name" content="Docker Documentation" /> -->
+  <!-- <meta property="article:published_time" itemprop="datePublished" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/> -->
+  <!-- <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebPage","headline":{{ page.title | default: page_title | jsonify }},"description":{{ page.description | default: page_description | jsonify }},"url":"https://docs.docker.com{{ page.url }}"}</script> -->
   <!-- END SEO STUFF -->
 </head>
