--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
     </a>
 </div>
 <div class="search-form" id="search-div">
-    <form class="search-form form-inline" id="searchForm" action="/search/" method="get">
+    <form class="search-form form-inline" id="searchForm" action="/search" method="get">
         <label for="st-search-input" class="sr-only">Search</label>
         <input class="search-field form-control ds-input" id="st-search-input" name="q" placeholder="Search the docs" type="search" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;">
         <div id="autocompleteResults"></div>
