ASNA color (from asna.com)

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -19,7 +19,7 @@ $primary-links:           hsl(206,  85%,  54%);
 $bg-body:                 hsl(206,   0%, 100%);
 $bg-body-landing:         hsl(206,  14%,  99%);
 $bg-header:               hsl(206,  85%,  54%);
-$bg-secondary:            hsl(206,  85%,  54%);
+$bg-secondary:            rgb(0,68,119);
 $bg-sidebar:              hsl(206,  14%,  99%);
 $bg-footer:               hsl(206,   0%, 100%);
 $bg-footer-landing:       hsl(214, 100%,  20%);
