Use home Landing Page with cards and add Manuals section.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-md-3">
                     <ul class="footer_links">
-                        <li><b><a href="https://www.asna.com/why-migrations">Why Migrations?</a></b></li>
-                        <li><a href="https://www.asna.com/what-container">What is a Monarch?</a></li>
+                        <li><b><a href="https://asna.com/us/services/migration">Why Migrations?</a></b></li>
+                        <li><a href="https://asna.com/us/products/monarch">What is a Monarch?</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3">
@@ -23,12 +23,9 @@
                 <div class="col-xs-12 col-sm-3 col-md-3">
                     <ul class="footer_links">
                         <li><b><a href="https://www.asna.com/company" target="_blank" rel="noopener">Company</a></b></li>
-                        <li><a href="https://www.asna.com/company">About Us</a></li>
-                        <li><a href="https://www.asna.com/blog/" target="_blank" rel="noopener">Blog</a></li>
-                        <li><a href="https://www.asna.com/customers">Customers</a></li>
-                        <li><a href="https://www.asna.com/partners">Partners</a></li>
-                        <li><a href="https://www.asna.com/company/newsletters">Newsroom</a></li>
-                        <li><a href="https://www.asna.com/company/contact">Contact Us</a></li>
+                        <li><a href="https://asna.com/us/company">About Us</a></li>
+                        <li><a href="https://asna.com/us/articles/newsletter">Newsroom</a></li>
+                        <li><a href="https://asna.com/us/contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +33,7 @@
                 <nav class="footer_sub_nav">
                     <ul class="menu">
                         <li><a href="https://www.asna.com/legal">Legal</a></li>
-                        <li><a href="https://www.asna.com/company/contact">Contact</a></li>
+                        <li><a href="https://asna.com/us/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
