--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,7 +2,7 @@
 {%- if page.edit_url -%}
     {%- assign edit_url = page.edit_url -%}
 {%- else -%}
-    {%- assign edit_url = "https://github.com/docker/docker.github.io/edit/master/" | append: page.path -%}
+    {%- assign edit_url = "https://github.com/asnaqsys/asnaqsys.github.io/edit/main/" | append: page.path -%}
 {%- endif -%} -->
 <!DOCTYPE html>
 <html lang="en">
