--- a/_scss/_landing.scss
+++ b/_scss/_landing.scss
@@ -159,7 +159,7 @@ body.landing {
     }
   }
 
-  $icons: rocket, download-docker, guides, whats-new, manuals, reference;
+  $icons: download-asna, guides, concepts, manuals, reference, whats-new;
 
   .card {
     color: $body-text;
