--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -18,7 +18,7 @@ $primary-links:           hsl(206,  85%,  54%);
 
 $bg-body:                 hsl(206,   0%, 100%);
 $bg-body-landing:         hsl(206,  14%,  99%);
-$bg-header:               hsl(206,  85%,  54%);
+$bg-header:               rgb(0,68,119);;
 $bg-secondary:            rgb(0,68,119);
 $bg-sidebar:              hsl(206,  14%,  99%);
 $bg-footer:               hsl(206,   0%, 100%);
