--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,10 +24,10 @@
   <link rel="canonical" href="{{ domain_name }}{{ page.url }}" />
 
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicons/docsX2.ico" sizes="129x128">
-  <link rel="apple-touch-icon" type="image/x-icon" href="/favicons/docsX2.ico" sizes="129x128">
-  <meta name="msapplication-TileImage" content="/favicons/docsX2.ico">
-  <meta property="og:image" content="/favicons/docsX2.ico"/>
+  <link rel="icon" type="image/x-icon" href="/favicons/asnaqsys@2x.ico" sizes="128x128">
+  <link rel="apple-touch-icon" type="image/x-icon" href="/favicons/asnaqsys@2x.ico" sizes="128x128">
+  <meta name="msapplication-TileImage" content="/favicons/asnaqsys@2x.ico">
+  <meta property="og:image" content="/favicons/asnaqsys@2x.ico"/>
   <meta name="theme-color" content="#2496ed" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
