--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </nav>
-
+<h1 class="top-header col-xs-12 text-center">{{page.title}}</h1>
   {{ content }}
 
   <footer class="footer">
