--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                 <div class="col-xs-12 col-sm-3 col-md-3">
                     <ul class="footer_links">
                         <li><b><a href="https://asna.com/us/services/migration">Why Migrations?</a></b></li>
-                        <li><a href="https://asna.com/us/products/monarch">What is Monarch Application?</a></li>
+                        <li><a href="https://asna.com/us/products/monarch">What is a Monarch Application?</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3">
