--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <meta name="robots" content="noindex"/>
   {%- endif %}
   {%- if jekyll.environment == 'production' and site.google_analytics != '' -%}{%- include analytics/google_analytics.html GOOGLE_ID=site.google_analytics -%}{%- endif -%}
-  <title>{{ page.title | default: page_title }} | ASNA Monarch Core Framework Documentation</title>
+  <title>{{ page.title | default: page_title }} | ASNA Monarch Base Documentation</title>
   <meta name="description" content="{{ page.description | default: page_description | escape}}" />
   <meta name="keywords" content="{{ page.keywords | default: 'monarch, asna monarch, migration, as/400, ibm i, ibmi' }}">
   <link rel="canonical" href="{{ domain_name }}{{ page.url }}" />
