--- a/_scss/_landing.scss
+++ b/_scss/_landing.scss
@@ -159,7 +159,7 @@ body.landing {
     }
   }
 
-  $icons: download-asna, guides, concepts, manuals, reference, whats-new;
+  $icons: download-asna-qsys, guides, concepts, manuals, reference, whats-new;
 
   .card {
     color: $body-text;
