--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-{%- if page.description == nil and page.datafile != nil and page.datafile != '' -%}
+﻿{%- if page.description == nil and page.datafile != nil and page.datafile != '' -%}
     {%- assign yaml_data = site.data[page.datafolder][page.datafile] -%}
     {%- if yaml_data.long and yaml_data.long != '' -%}
         {%- assign page_description = page.title | append: ': ' | append: yaml_data.long | strip_html | strip | truncatewords: 30 -%}
@@ -17,10 +17,12 @@
   {%- if page.sitemap == false %}
   <meta name="robots" content="noindex"/>
   {%- endif %}
-  {%- if jekyll.environment == 'production' and site.google_analytics != '' -%}{%- include analytics/google_analytics.html GOOGLE_ID=site.google_analytics -%}{%- endif -%}
-  <title>{{ page.title | default: page_title }} | ASNA Monarch Base Documentation</title>
+  {%- if jekyll.environment == 'production' and site.google_analytics != '' -%}{%- include analytics/google_analytics.html GOOGLE_ID=site.google_analytics -%}{%- endif %}
+  <title>{{ page.title | default: 'ASNA Monarch Base Documentation' }}</title>
   <meta name="description" content="{{ page.description | default: page_description | escape}}" />
-  <meta name="keywords" content="{{ page.keywords | default: 'monarch, asna monarch, migration, as/400, ibm i, ibmi' }}">
+  {%- if page.keywords %}
+  <meta name="keywords" content="{{ page.keywords }}">
+  {%-    endif %}
   <link rel="canonical" href="{{ domain_name }}{{ page.url }}" />
 
   <!-- favicon -->
