Add Landing Article Icon and Hide Mobile
Hide the Mobile Support from the Horizontal Bar menu until it is developed.

--- a/_scss/_landing.scss
+++ b/_scss/_landing.scss
@@ -159,7 +159,7 @@ body.landing {
     }
   }
 
-  $icons: download-asna-qsys, guides, concepts, manuals, reference, whats-new;
+  $icons: download-asna-qsys, guides, concepts, manuals, reference, articles, whats-new;
 
   .card {
     color: $body-text;
