Change landing page for Footer's 'Why Migrate'?

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-3 col-md-3">
                     <ul class="footer_links">
-                        <li><b><a href="https://asna.com/us/services/migration">Why Migrations?</a></b></li>
+                        <li><b><a href="https://asna.com/en/white-paper/growing-concern-for-the-future-of-rpg-applications/">Why migrate?</a></b></li>
                         <li><a href="https://asna.com/us/products/monarch">What is a Monarch Application?</a></li>
                     </ul>
                 </div>
