Possible fix to Goggle SEO "Federated Learning of Cohorts"

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
   <meta name="keywords" content="{{ page.keywords }}">
   {%-    endif %}
   <link rel="canonical" href="{{ domain_name }}{{ page.url }}" />
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="/favicons/asnaqsys@2x.ico" sizes="128x128">
